[package]
name = "kzg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-poly-commit = "0.4.0"
ark-serialize = { version = "^0.4", features = ["derive"] }
ark-crypto-primitives = {version = "^0.4.0", default-features = false, features = ["sponge"] }
ark-bn254 = "0.4"
rand = "0.8.5"